--- a/app/src/main/res/layout/item_ota.xml
+++ b/app/src/main/res/layout/item_ota.xml
@@ -26,7 +26,7 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:src="@drawable/img_alarm" />
+                android:src="@drawable/img_ota" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
