--- a/app/src/main/res/layout/item_ota.xml
+++ b/app/src/main/res/layout/item_ota.xml
@@ -16,6 +16,8 @@
         app:cardCornerRadius="10dp">
 
         <LinearLayout
+            android:foreground="@drawable/item_ripple_effect"
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="10dp">
