--- a/app/src/main/res/menu/menu_node.xml
+++ b/app/src/main/res/menu/menu_node.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         app:showAsAction="always"
-        android:id="@+id/item_restart"
-        android:title="Restart" />
+        android:id="@+id/item_ok"
+        android:title="OK" />
 
 </menu>
