--- a/app/src/main/res/layout/dialog_ota_error.xml
+++ b/app/src/main/res/layout/dialog_ota_error.xml
@@ -11,6 +11,7 @@
         android:orientation="vertical">
 
         <TextView
+            style="@style/DialogHeaderText"
             android:layout_height="wrap_content"
             android:id="@+id/error_title"
             android:layout_width="match_parent"
