--- a/app/src/main/res/layout/dialog_model_config_bottom_sheet.xml
+++ b/app/src/main/res/layout/dialog_model_config_bottom_sheet.xml
@@ -16,33 +16,22 @@
         android:textSize="22sp"
         android:textStyle="bold" />
 
-    <RadioGroup
-        android:id="@+id/rdg_model_config"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:orientation="horizontal">
-
-        <RadioButton
-            android:id="@+id/rdbtn_set_public"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <CheckBox
+            android:id="@+id/cb_set_publication"
             android:text="Set Publication"
-            android:textSize="16sp" />
-
-        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <CheckBox
             android:layout_marginLeft="20dp"
-            android:id="@+id/rdbtn_add_subscription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:id="@+id/cb_add_subscription"
             android:text="Add Subscription"
-            android:textSize="16sp" />
-    </RadioGroup>
-
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 
     <Button
         android:id="@+id/btn_start_config"
