--- a/app/src/main/res/layout/item_node.xml
+++ b/app/src/main/res/layout/item_node.xml
@@ -17,6 +17,7 @@
         card_view:cardUseCompatPadding="true">
 
         <LinearLayout
+            android:foreground="@drawable/item_ripple_effect"
             android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -51,8 +52,7 @@
             <LinearLayout
                 android:paddingHorizontal="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:foreground="@drawable/item_ripple_effect">
+                android:layout_height="match_parent">
 
                 <LinearLayout
                     android:gravity="center_vertical"
