--- a/app/src/main/res/layout/item_node.xml
+++ b/app/src/main/res/layout/item_node.xml
@@ -128,9 +128,10 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/img_flame_signal"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
-                        android:background="@drawable/img_flame" />
+                        android:background="@drawable/img_flame_background" />
 
                     <ImageView
                         android:layout_width="40dp"
