--- a/app/src/main/res/layout/item_node.xml
+++ b/app/src/main/res/layout/item_node.xml
@@ -128,6 +128,7 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:visibility="invisible"
                         android:id="@+id/img_flame_signal"
                         android:layout_width="40dp"
                         android:layout_height="40dp" />
