--- a/app/src/main/res/layout/dialog_model_config_bottom_sheet.xml
+++ b/app/src/main/res/layout/dialog_model_config_bottom_sheet.xml
@@ -9,6 +9,7 @@
     android:theme="@style/Theme.FireMesh">
 
     <TextView
+        android:id="@+id/tv_functionality_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Model Config"
