--- a/app/src/main/res/layout/item_functionality.xml
+++ b/app/src/main/res/layout/item_functionality.xml
@@ -3,41 +3,33 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:paddingTop="10dp"
     android:foreground="@drawable/item_ripple_effect"
-    android:paddingVertical="10dp"
-    android:paddingEnd="10dp">
+    android:paddingHorizontal="10dp">
 
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical">
+            android:layout_height="wrap_content">
 
             <TextView
+                android:layout_centerVertical="true"
+                android:gravity="center_vertical"
                 android:id="@+id/tv_functionality_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Functionality Name"
                 android:textColor="@color/primary_color"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/tv_functionality_binded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Binded"
+                android:text="Bind"
                 android:textColor="@color/primary_color"
                 android:layout_alignParentEnd="true"
-                android:layout_gravity="center"
                 android:textSize="14sp"/>
-
-<!--            <ImageView-->
-<!--                android:id="@+id/iv_bluetooth"-->
-<!--                android:layout_width="25dp"-->
-<!--                android:layout_height="25dp"-->
-<!--                android:layout_alignParentEnd="true"-->
-<!--                android:layout_gravity="center"-->
-<!--                android:src="@drawable/ic_add" />-->
         </RelativeLayout>
 
 
