remove dark theme

--- a/app/src/main/res/values-v29/themes.xml
+++ b/app/src/main/res/values-v29/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.FireMesh" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Primary brand color. -->
-
+        <item name="android:forceDarkAllowed">false</item>
         <item name="colorPrimary">@color/primary_color</item>
         <item name="colorPrimaryVariant">@color/primary_color</item>
         <item name="colorOnPrimary">@color/white</item>
