--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -50,7 +50,7 @@
             android:id="@+id/rv_node_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/gray_background_color" />
+            android:background="@color/white" />
 
         <LinearLayout
             android:id="@+id/no_node_background"
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_marginHorizontal="10dp"
-            android:background="@color/gray_background_color"
+            android:background="@color/white"
             android:gravity="center"
             android:orientation="vertical">
 
