--- a/app/src/main/res/layout/fragment_ota_list.xml
+++ b/app/src/main/res/layout/fragment_ota_list.xml
@@ -7,14 +7,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/scanning_gradient_container"
-        android:background="@color/gray_background_color" />
+        android:background="@color/white" />
 
     <LinearLayout
         android:layout_above="@id/scanning_gradient_container"
         android:id="@+id/looking_for_devices_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/gray_background_color"
+        android:background="@color/white"
         android:gravity="center"
         android:orientation="vertical">
 
