--- a/app/src/main/res/layout/fragment_subnet_list.xml
+++ b/app/src/main/res/layout/fragment_subnet_list.xml
@@ -8,7 +8,7 @@
         android:id="@+id/rv_subnet_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/gray_background_color" />
+        android:background="@color/white" />
 
     <LinearLayout
         android:layout_centerInParent="true"
@@ -16,7 +16,7 @@
         android:id="@+id/no_subnet_background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/gray_background_color"
+        android:background="@color/white"
         android:gravity="center"
         android:orientation="vertical">
 
