--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -4,12 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:card_view="http://schemas.android.com/tools"
-    android:layout_marginBottom="10dp"
+    android:layout_margin="10dp"
     android:orientation="horizontal"
     android:weightSum="10">
 
     <androidx.cardview.widget.CardView
         android:layout_margin="8dp"
+        app:cardPreventCornerOverlap="false"
         card_view:cardElevation="8dp"
         card_view:cardUseCompatPadding="true"
         android:layout_width="match_parent"
@@ -17,6 +18,7 @@
         app:cardCornerRadius="10dp">
 
         <LinearLayout
+            android:background="@drawable/background_gradient_blue"
             android:foreground="@drawable/item_ripple_effect"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
