--- a/app/src/main/res/layout/item_node.xml
+++ b/app/src/main/res/layout/item_node.xml
@@ -4,11 +4,12 @@
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp"
+    android:layout_margin="10dp"
     android:orientation="horizontal"
     android:weightSum="10">
 
     <androidx.cardview.widget.CardView
+        app:cardPreventCornerOverlap="false"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="8dp"
@@ -17,6 +18,7 @@
         card_view:cardUseCompatPadding="true">
 
         <LinearLayout
+            android:background="@drawable/background_gradient_blue"
             android:foreground="@drawable/item_ripple_effect"
             android:padding="10dp"
             android:layout_width="match_parent"
