--- a/app/src/main/res/layout/item_unprovisioned_device.xml
+++ b/app/src/main/res/layout/item_unprovisioned_device.xml
@@ -5,10 +5,13 @@
     android:layout_height="wrap_content"
     xmlns:card_view="http://schemas.android.com/tools"
     android:orientation="horizontal"
+    android:layout_margin="10dp"
+
     android:weightSum="10">
 
     <androidx.cardview.widget.CardView
         android:layout_margin="8dp"
+        app:cardPreventCornerOverlap="false"
         card_view:cardElevation="8dp"
         card_view:cardUseCompatPadding="true"
         android:layout_width="match_parent"
