--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -18,7 +18,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
         android:text="@string/app_name"
-        android:textColor="#0288D1"
+        android:textColor="@color/primary_color"
         android:textSize="24sp"
         android:textStyle="bold" />
 
