--- a/app/src/main/res/layout/fragment_node_list.xml
+++ b/app/src/main/res/layout/fragment_node_list.xml
@@ -26,6 +26,7 @@
             android:src="@drawable/img_empty" />
 
         <TextView
+            android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
