--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -30,7 +30,7 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:src="@drawable/img_group_2" />
+                android:src="@drawable/img_group" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
