--- a/app/src/main/res/layout/item_ota.xml
+++ b/app/src/main/res/layout/item_ota.xml
@@ -25,10 +25,10 @@
             <ImageView
                 android:id="@+id/iv_bluetooth"
                 android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_height="60dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:src="@drawable/img_ota_2" />
+                android:src="@drawable/img_alarm" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
