--- a/app/src/main/res/layout/item_subnet.xml
+++ b/app/src/main/res/layout/item_subnet.xml
@@ -30,7 +30,7 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:src="@drawable/img_network" />
+                android:src="@drawable/img_subnet" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
